--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,7 @@
 <title>POI5 a short walk around Haworth Town Centre</title>
 
 <script type="text/javascript" src="./iscroll-zoom.js"></script>
+<script type="text/javascript" src="./demoUtils.js"></script>
 
 <link href="style.css" rel="stylesheet" type="text/css"> 
 
@@ -24,7 +25,10 @@ function loaded () {
 	});
 }
 
-document.addEventListener('touchmove', function (e) { e.preventDefault(); }, false);
+document.addEventListener('touchmove', function (e) { e.preventDefault(); }, isPassive() ? { 
+ 	capture: false, 
+ 	passive: false 
+ } : false); 
 
 </script>
 
